--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             background-color: #000000;
             color: #ffffff;
             font-family: 'Roboto', sans-serif;
-            position: relative; /* Added to position the clock */
+            position: relative;
         }
 
         .clock {
